--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
   <section id="data" class="d-flex align-items-center">
     <div class="container opaque">
+      <h1 class="text-center">TreBOOL</h1>
       <div class="row">
         <div class="col text-center">
           <label for="name-surname">Nome Cognome</label>
